--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
           <div class="project-description">
             <h2>Portfolio</h2>
             <p>
-              Jednym z moich projektów jest właśniue strona na której się znajdujesz, moja wizytówka.
-              Podczas tworzenia tej strony uzywałem takich technologi jak HTML, CSS, JavaScript.
+              Jednym z moich projektów jest właśnie strona na której się znajdujesz, moja wizytówka.
+              Podczas tworzenia tej strony używałem takich technologi jak HTML, CSS, JavaScript.
             </p>
             <a href="https://github.com/Urodii/portfolio" class="project-link" target="_blank"
               ><i class="fa fa-github" aria-hidden="true"> View Code</i></a
@@ -203,7 +203,7 @@
         <h2>Kontakt</h2>
         <p>
           Aktualnie szukam pracy, doceniam każdy nawiązany kontak ze mną, jeśli masz
-          jakąś oferte lub chcesz się ze mną skontaktować, pisz śmiało
+          jakąś oferte lub chcesz się ze mną skontaktować, pisz śmiało !
         </p>
         <div class="container">
           <p>
