--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <h2>Aplikacja do logowania się rejestrowania</h2>
             <p>
               Prosta aplikacja która umożliwia użytkownikowi założenie konta a później
-              zalogowanie się. Dane zostaję zapisane w bazie danych Firebase.
+              zalogowanie się. Dane zostają zapisane w bazie danych Firebase.
             </p>
             <a href="https://github.com/Urodii/Login_Register_apk" class="project-link" target="_blank"
               ><i class="fa fa-github" aria-hidden="true"> View Code</i></a
